--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 .App {
   
   background-color: #151A30;
-  position: fixed;
   min-width: 100%;
   min-height: 100%;
   background-size: cover;
   background-position: center; 
+ 
 }
 
 .brand-logo{
@@ -14,9 +14,31 @@
 
 .dark{
   background: #222B45;
-  color: #494a4e
+  color: #494a4e;
+  /* position: fixed;
+  z-index: 100; */
 }
 
+.nav-menu {
+  background-color: #060b26;
+  width: 250px;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  transition: 850ms;
+}
+
+.nav-menu.active {
+  left: 0;
+  transition: 350ms;
+}
+
+/* .form{
+  padding-left: .5rem;
+} */
 .sign-out{
   margin-left: 20px;
 }
@@ -24,12 +46,23 @@
 .search{
   background: #151A30;
   color: #737373;
+  border-radius: 8px;
+  padding-left: 0.5rem;
+  padding-right: 0.3rem;
   
+}
+.search:focus{
+  background:  #737373;
+  color: #151A30;
 }
 
 .search-btn{
   background: #151A30;
   color: #FFFFFF;
+}
+.search-btn:hover{
+  background:  #FFFFFF;
+  color: #151A30;
 }
 .nav_item {
     padding-right: .5rem;
@@ -38,4 +71,20 @@
     padding-bottom: .5rem;
     color: #FFFFFF;
 }
+
+.nav-menu-items {
+  width: 100%;
+}
+
+.navbar-toggle {
+  background-color: #060b26;
+  width: 100%;
+  height: 80px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+ 
+
 
