--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@
   min-height: 100%;
   background-size: cover;
   background-position: center; 
- 
+  overflow-x: hidden;
+  
 }
 
 .brand-logo{
@@ -85,6 +86,35 @@
   align-items: center;
 }
 
- 
+.carousel{
+  position: relative;
+    width: 100%;
+    height: auto;
+    text-align: center;
+}
+
+.carousel .thumb{
+  height: 80px;
+}
+
+.carousel .thumb img {
+  height: 100%;
+  object-fit: cover;
+}
+
+.makeStyles-heroContent-2{
+  padding-bottom: 0 !important;
+}
+
+.loader {
+  border: 5px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 5px solid #3498db;
+  width: 50px;
+  height: 50px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 2s linear infinite;
+  align-self: center;
+}
 
 
