--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,17 @@
 .App {
-  
-  background-color: #151A30;
   min-width: 100%;
   min-height: 100%;
   background-size: cover;
-  background-position: center; 
+  background-position: center;
   overflow-x: hidden;
-  
 }
 
-.brand-logo{
+.brand-logo {
   margin-left: 3rem;
 }
 
-.dark{
-  background: #222B45;
+.dark {
+  background: #222b45;
   color: #494a4e;
   /* position: fixed;
   z-index: 100; */
@@ -40,37 +37,36 @@
 /* .form{
   padding-left: .5rem;
 } */
-.sign-out{
+.sign-out {
   margin-left: 20px;
 }
 
-.search{
-  background: #151A30;
+.search {
+  background: #151a30;
   color: #737373;
   border-radius: 8px;
   padding-left: 0.5rem;
   padding-right: 0.3rem;
-  
 }
-.search:focus{
-  background:  #737373;
-  color: #151A30;
+.search:focus {
+  background: #737373;
+  color: #151a30;
 }
 
-.search-btn{
-  background: #151A30;
-  color: #FFFFFF;
+.search-btn {
+  background: #151a30;
+  color: #ffffff;
 }
-.search-btn:hover{
-  background:  #FFFFFF;
-  color: #151A30;
+.search-btn:hover {
+  background: #ffffff;
+  color: #151a30;
 }
 .nav_item {
-    padding-right: .5rem;
-    padding-left: .5rem;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-    color: #FFFFFF;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  color: #ffffff;
 }
 
 .nav-menu-items {
@@ -82,18 +78,18 @@
   width: 100%;
   height: 80px;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 
-.carousel{
+.carousel {
   position: relative;
-    width: 100%;
-    height: auto;
-    text-align: center;
+  width: 100%;
+  height: auto;
+  text-align: center;
 }
 
-.carousel .thumb{
+.carousel .thumb {
   height: 80px;
 }
 
@@ -102,7 +98,7 @@
   object-fit: cover;
 }
 
-.makeStyles-heroContent-2{
+.makeStyles-heroContent-2 {
   padding-bottom: 0 !important;
 }
 
@@ -116,5 +112,3 @@
   animation: spin 2s linear infinite;
   align-self: center;
 }
-
-
