--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,37 @@
   animation: spin 2s linear infinite;
   align-self: center;
 }
+
+.gameinput {
+  margin-left: 50px;
+  margin-top: 35px;
+}
+
+.inputGame {
+  background: transparent;
+  margin-bottom: 10px;
+  width: 350px;
+  height: 45px;
+  padding-left: 8px;
+  border-radius: 10px;
+  border: 1px rgb(170, 170, 170) solid;
+  outline: none;
+  color: rgb(83, 83, 83);
+}
+
+.dropdown {
+  width: 170px;
+  margin-bottom: 15px;
+  background: transparent;
+  outline: none;
+  color: rgb(83, 83, 83);
+}
+
+.textarea {
+  width: 270px;
+  height: 120px;
+}
+
+.addgame {
+  background-color: rgb(0, 0, 0);
+}
